Added new feature X

--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -185,7 +185,7 @@
           <h2>Coming Soon!</h2>
           <p>Discover our latest collection of cosmetics arriving this month.</p>
     
-<!--  put call of action here    stle are in sty.css -->
+<!--  put call of action here    stle ar -->
       </div>
   </div>
 </div>
