Your commit message here

--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -21,9 +21,7 @@
  
 <body>
 
-
-
-  <header class="header1">
+  <header id="custom-header" class="header1">
     <div class="right-section">
         <!-- Call Us Number -->
         <div class="call-us">
@@ -84,6 +82,7 @@
         </div>
     </div>
 </header>
+
 <header class="custom-header">
   <!-- Logo -->
   <div class="logo">
