Your commit message here

--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -35,7 +35,7 @@
         <div class="social-icons">
             <label for="currency">
                 <i class="fas fa-dollar-sign"></i> <!-- Icon for currency -->
-                LIPA/PAY IN:
+                PAY IN:
             </label>
             <select name="currency" id="currency">
                 <option value="USD">USD</option>
