Your commit message here

--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -200,7 +200,7 @@
     <button type="submit" class="search-button">Search</button>
   </div>
   <div class="user-actions">
-    <div class="sign">Sign In/Sign Up</div>
+    <i class="fas fa-user"></i>
   </div>
 </div>
 
@@ -208,7 +208,7 @@
   <a href="#">Cart</a>
   <a href="#">Wishlist</a>
   <a href="#">Orders</a>
-  <a href="#">Settings</a>
+  <a href="phones.html">phones</a>
   <a href="/views/admin_dashboard">Admin</a>
 </div>
 
