--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -193,14 +193,17 @@
       <div class="menu-icon">&#9776;</div>
     </a>
   
-  <div class="logo">marketplace</div>
+  <div class="logo1">marketplace</div>
  
   <div class="search-bar">
     <input type="text" placeholder="Search..." class="search-input">
     <button type="submit" class="search-button">Search</button>
   </div>
-  <div class="user-actions">
-    <i class="fas fa-user"></i>
+  <div class="user-actions"> <i class="fas fa-user"></i>
+
+
+    <div class="sign">    Sign In/Sign Up</div>
+   
   </div>
 </div>
 
