--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -199,10 +199,10 @@
     <input type="text" placeholder="Search..." class="search-input">
     <button type="submit" class="search-button">Search</button>
   </div>
-  <div class="user-actions"> <i class="fas fa-user"></i>
+  <div class="user-actions"> 
 
 
-    <div class="sign">    Sign In/Sign Up</div>
+    <div class="sign">   <i class="fas fa-user"></i> Sign In/Sign Up</div>
    
   </div>
 </div>
