--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -200,7 +200,7 @@
     <button type="submit" class="search-button">Search</button>
   </div>
   <div class="user-actions"> 
-    <i class="fas fa-user"></i>Sign in
+    <i class="fas fa-user"></i>
 
     <div class="sign">   <i class="fas fa-user"></i> Sign In/Sign Up</div>
    
