Your commit message here

--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -79,7 +79,7 @@
 
 <header class="custom-header">
   <!-- Logo -->
-  <div class="logo">
+  <div class="lago">
     <img src="images/productImages-1707095455008.png" alt="Your Logo">
   </div>
   
