Your commit message here

--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -219,6 +219,7 @@
 
 
 
+
  
 <div class="container" id="dataContainer">
   <div class="advertisement-container">
@@ -458,7 +459,7 @@
   <div id="productModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <div class="image-container" id="imageContainer"></div> <!-- Container for images -->
+      <div class="image-container1" id="imageContainer1"></div> <!-- Container for images -->
       <div class="product-details" id="productDetails"></div> <!-- Placeholder for product details -->
     </div>
   </div>
@@ -594,7 +595,7 @@
 
 
 
-                                                                                                                                                                                                                                                                                                                                                                                                                               
+    
   
         <div id="productList"></div>
         <div id="productModal" class="modal">
