--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -53,6 +53,7 @@
             <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
             <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
             <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
 </header>
@@ -221,7 +222,7 @@
 
 
  
-<div class="container" id="dataContainer">
+<div class="container2" id="dataContainer">
   <div class="advertisement-container">
       <div class="advertisement-card">
           <h2>Coming Soon!</h2>
@@ -618,35 +619,28 @@
 
 
       <div id="cart" class="cart-container" style="display: none;">
-        <h2>Shopping Cart</h2>
-        <div id="cartItems"></div>
-        <p>Total Price: <span id="totalPrice">0</span></p>
-        <button class="btn btn-primary" onclick="toggleOrderForm()">Place Your Order</button>
+        <h2 class="text-center mb-4">Shopping Cart</h2>
+        <div id="cartItems" class="mb-3"></div>
+        <p class="text-center">Total Price: $<span id="totalPrice">0</span></p>
+        <button class="btn btn-primary btn-block mb-3" onclick="toggleOrderForm()">Place Your Order</button>
         <div id="orderForm" style="display: none;" class="form-container">
-            <hr>
-            <h3>Order Details</h3>
-            <form id="placeOrderForm">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email address</label>
-                    <input type="email" class="form-control" id="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="phone">Phone</label>
-                    <input type="tel" class="form-control" id="phone" required>
-                </div>
-                <button type="button" class="btn btn-success" onclick="submitOrder()">Submit Order</button>
-            </form>
+          <hr>
+          <h3 class="text-center mb-3">Order Details</h3>
+          <form id="placeOrderForm">
+            <div class="form-group">
+              <input type="text" class="form-control" id="name" placeholder="Name" required>
+            </div>
+            <div class="form-group">
+              <input type="email" class="form-control" id="email" placeholder="Email" required>
+            </div>
+            <div class="form-group">
+              <input type="tel" class="form-control" id="phone" placeholder="Phone" required>
+            </div>
+            <button type="button" class="btn btn-success btn-block" onclick="submitOrder()">Submit Order</button>
+          </form>
         </div>
-    </div>
-
-
-
-
-
+      </div>
+      
 
 
 
