--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -392,7 +392,7 @@
   <div id="productModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <div class="image-container" id="imageContainer"></div> <!-- Container for images -->
+      <div class="image-container1" id="imageContainer"></div> <!-- Container for images -->
       <div class="product-details" id="productDetails"></div> <!-- Placeholder for product details -->
     </div>
   </div>
@@ -552,7 +552,8 @@
 
       <div id="cart" class="cart-container" style="display: none;">
         <h2>Shopping Cart</h2>
-        <div id="cartItems"></div>
+        <div id="cartItems">  <br> </div>
+
         <p>Total Price: <span id="totalPrice">0</span></p>
         <button class="btn btn-primary" onclick="toggleOrderForm()">Place Your Order</button>
         <div id="orderForm" style="display: none;" class="form-container">
