Your commit message

--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -452,6 +452,7 @@
 
 
  
+ 
 <!-- Right Column: Latest Products -->
 <div class="order-md-2">
   <div class="row justify-content-end">
@@ -489,9 +490,9 @@
       </div>
       <div class="col-md-4">
           <div id="house" class="category text-right mt-3">
-              <h6><i class="fas fa-home mr-2"></i>Latest Houses</h6>
+              <h6><i class="fas fa-home mr-2"></i>Latest Houses</h6> 
  
-              <div id="latestHouse" class="category-products card-container"></div>
+              <div id="latestHouse"class="category-products card-container"></div>
               <div class="button-container">
                 <button class="btn btn-primary prev-btn"><i class="fas fa-chevron-left"></i></button>
                 <button class="btn btn-primary next-btn"><i class="fas fa-chevron-right"></i></button>
@@ -506,10 +507,6 @@
       </div>
   </div>
 </div>
-
-
-
-
 
 
 
@@ -651,7 +648,84 @@
 
 
  
- 
+function displayLatestProducts(category, products) {
+  const container = $(`#latest${category.charAt(0).toUpperCase() + category.slice(1)}`);
+  container.empty(); // Clear previous content
+
+  let activeIndex = 0; // Index of the first active card
+  let cardsPerPage = 4; // Number of cards to display per page by default
+
+  if ($(window).width() <= 576) {
+    cardsPerPage = 2; // Set the number of cards to display per page for phone screens
+  }
+
+  function updateCards() {
+    container.empty(); // Clear previous content
+
+    for (let i = activeIndex; i < activeIndex + cardsPerPage && i < products.length; i++) {
+      const product = products[i];
+      const card = $(`
+        <div class="card mt-3 ${i === activeIndex ? 'active' : 'd-none'}">
+          <div class="card-header">${product.productName}</div>
+          <div class="card-body">
+            <p>${product.description}</p>
+            <p>Price: $${product.price}</p>
+            <img src="/images/${product.productImages[0]}" alt="Product Image" class="img-fluid card-img-top" width="200" height="150">
+            <div class="overlay"></div>
+          </div>
+        </div>
+      `);
+      
+      // Create button container and buttons using jQuery
+      const buttonContainer = $('<div class="button-container"></div>');
+
+      const viewBtn = $('<button class="view-btn">View</button>');
+      viewBtn.on('click', () => {
+        viewProduct({
+          productId: product._id,
+          productName: product.productName,
+          description: product.description,
+          price: product.price,
+          category: product.category,
+          productImages: product.productImages
+        });
+      });
+
+      // Only the add to cart button functionality will be updated here
+      const addToCartBtn = document.createElement('button');
+      addToCartBtn.classList.add('add-to-cart-btn');
+      addToCartBtn.textContent = 'Add to Cart';
+      addToCartBtn.setAttribute('id', `add-to-cart-${product._id}`); // Add id attribute
+      addToCartBtn.addEventListener('click', () => {
+        addToCart(product._id, product.productName, product.price);
+      });
+
+      buttonContainer.append(viewBtn);
+      buttonContainer.append(addToCartBtn);
+      card.find('.overlay').append(buttonContainer);
+      container.append(card);
+    }
+  }
+
+  // Call updateCards initially and on window resize
+  $(window).on('resize', updateCards);
+  updateCards();
+
+  // Navigation buttons
+  container.parent().find('.next-btn').click(function() {
+    if (activeIndex + cardsPerPage < products.length) {
+      activeIndex += cardsPerPage;
+      updateCards();
+    }
+  });
+
+  container.parent().find('.prev-btn').click(function() {
+    if (activeIndex - cardsPerPage >= 0) {
+      activeIndex -= cardsPerPage;
+      updateCards();
+    }
+  });
+}
 
 
   </script>
