Add feature X and fix bug Y

--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -238,8 +238,8 @@
     </form>
   </div>
 </div>
-
-<!-- Logout Modal -->
+ 
+</div>
 <!-- Logout Button Placement -->
 <div id="logoutButtonContainer">
   <button type="button" id="logoutButton">Logout</button>
