--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -119,7 +119,7 @@
       <div class="advertisement-card">
           <h2>Coming Soon!</h2>
           <p>Discover our latest collection of cosmetics arriving this month.</p>
-          <a href="#" class="btn btn-primary">Learn More</a>
+          <a href="#" class="btn btn-primary">more</a>
       </div>
   </div>
 </div>
