Added unique IDs to header elements and updated CSS for better visibility

--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -153,6 +153,42 @@
 
 
 
+<header id="header">
+  <div id="call-us-section" class="right-section">
+    <!-- Call Us Number -->
+    <div id="call-us">
+      <i class="fas fa-phone" id="phone-icon"></i>
+      <span id="phone-number">+1-123-456-7890</span>
+    </div>
+  </div>
+
+  <!-- Right Section: Social Media Icons -->
+  <div id="social-icons-section" class="right-section">
+    <div id="social-icons" class="social-icons">
+      <label for="currency" id="currency-label">
+        <i class="fas fa-dollar-sign" id="currency-icon"></i> LIPA/PAY IN:
+      </label>
+      <select name="currency" id="currency-select">
+        <option value="USD">USD</option>
+        <option value="TZS">TZS</option>
+      </select>
+      
+      <label for="language" id="language-label">
+        <i class="fas fa-flag" id="language-icon"></i>
+      </label>
+      <select name="language" id="language-select">
+        <option value="en">English</option>
+        <option value="sw">Swahili</option>
+      </select>
+
+      <a href="#" class="social-icon" id="facebook-link"><i class="fab fa-facebook" id="facebook-icon"></i></a>
+      <a href="#" class="social-icon" id="twitter-link"><i class="fab fa-twitter" id="twitter-icon"></i></a>
+      <a href="#" class="social-icon" id="instagram-link"><i class="fab fa-instagram" id="instagram-icon"></i></a>
+      <a href="#" class="social-icon" id="linkedin-link"><i class="fab fa-linkedin" id="linkedin-icon"></i></a>
+      <a href="#" class="social-icon" id="youtube-link"><i class="fab fa-youtube" id="youtube-icon"></i></a>
+    </div>
+  </div>
+</header>
 
 
 
