Added unique IDs to header elements and updated CSS for better visibility

--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -59,45 +59,27 @@
     </div>
   </header>
 
-
-
-
-
-
-
-
-
-
-<header class="custom-header">
-  <!-- Logo -->
-  <div class="lago">
-    <img src="images/productImages-1707095455008.png" alt="Your Logo">
-  </div>
-  
-  <div class="header-content">
-    <!-- Title and Tagline -->
-    <div class="title-section">
-      <h1 class="site-title">enric-nakon</h1>     <h5 class="tagline blink">SHOP EVENTS & SAVE UP TO 65% OFF!</h5>
-
-
+  <header class="custom-header">
+    <!-- Logo -->
+    <div class="lago">
+      <img src="images/productImages-1707095455008.png" alt="Your Logo">
     </div>
- 
-    <!-- Feature Buttons -->
-    <div class="feature-buttons">
-      <!-- Sell Button -->
- 
- 
-        <button id="sellButton">Sell</button>
-     
     
- 
-      <!-- Admin Dashboard Button -->
- 
+    <div class="header-content">
+      <!-- Title and Tagline -->
+      <div class="title-section">
+        <h1 class="site-title">enric-nakon</h1>     
+        <h5 class="tagline blink">SHOP EVENTS & SAVE UP TO 65% OFF!</h5>
+      </div>
+   
+      <!-- Feature Buttons -->
+      <div class="feature-buttons">
+        <!-- Sell Button -->
+        <button id="sellButton">Sell</button>
+        <!-- Admin Dashboard Button -->
+      </div>
     </div>
-  </div>
-</header>
-
-
+  </header>
 
 
 <div class="navbar">
