Added unique IDs to header elements and updated CSS for better visibility

--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -71,7 +71,9 @@
     <div id="feature-buttons-section" class="right-section">
       <button id="sellButton"><i class="fas fa-dollar-sign"></i>Sell</button>
     </div>
-   
+    <div class="user-actions">
+      <div class="sign">Sign In/Sign Up <i class="fas fa-user"></i></div>
+    </div>
   </header>
 
 
