--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -26,9 +26,7 @@
     <div id="logo-section" class="left-section">
      
       <div id="title-section" class="title-section">
-        <h2 id="site-title">  <div class="logo">
-          <img src="images/productImages-1707095455008.png" alt="Your Logo"> <h3> Enricmarket-place</h3> 
-      </div></h2>
+        <h1 id="site-title">Enricmarket-place</h1>
         <h5 id="tagline" class="tagline blink">SHOP EVENTS & SAVE UP TO 65% OFF!</h5>
       </div>
     </div>
