Add media queries for responsive design and hide title section on mobile screens

--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -43,7 +43,7 @@
     <div id="social-icons-section" class="right-section">
       <div id="social-icons" class="social-icons">
         <label for="currency" id="currency-label">
-          <i class="fas fa-dollar-sign" id="currency-icon"></i> LIPA/PAY IN:
+          <i class="fas fa-dollar-sign" id="currency-icon"></i>
         </label>
         <select name="currency" id="currency-select">
           <option value="USD">USD</option>
