Added smaller image and positioned it within the footer

--- a/kuma/public/house.html
+++ b/kuma/public/house.html
@@ -92,10 +92,9 @@
     <a href="#">Pages</a>
   </div>
   <div class="search-bar">
-    <input type="text" placeholder="Search..." class="search-input">
-    <button type="submit" class="search-button">Search</button>
+    <input type="text" placeholder="Search..." id="searchInput" class="search-input">
+    <button type="submit" id="searchButton" class="search-button">Search</button>
   </div>
-
   <a href="#" class="cart-link" onclick="showCart(event)">
     <div id="cartIcon" class="cart-icon">
       <span id="cartCount">0</span>
@@ -163,7 +162,7 @@
 </div>
 <!-- Logout Button Placement -->
 <div id="logoutButtonContainer">
-  <button type="button" id="logoutButton">Logout</button>
+  <button type="button" id="logoutButton"> </button>
 </div>
 
 <!-- Logout Modal -->
@@ -196,31 +195,23 @@
     <div id="furniture" class="category text-right mt-3"> <!-- Changed id to "furniture" -->
       
       <div class="title-container">
-        <h1 class="title">compurter</h1>
+        <h1 class="title">house</h1>
         <div class="underline"></div>
     </div>
 <!-- Subcategory Links -->
 <div class="col-md-4">
 <div id="furniture" class="category text-right mt-3">
 
-        
-<div class="navbar10">
-  <!-- Navigation links -->
-  <a href="#" id="card101" class="subcategory-link" data-subcategory="Laptops">Laptops</a>
-  <a href="#" id="card201" class="subcategory-link" data-subcategory="Desktops">Desktops</a>
-  <a href="#" id="card301" class="subcategory-link" data-subcategory="Monitors">Monitors</a>
-  <a href="#" id="card401" class="subcategory-link" data-subcategory="Keyboards">Keyboards</a>
-  <a href="#" id="card501" class="subcategory-link" data-subcategory="Mice">Mice</a>
-  <a href="#" id="card601" class="subcategory-link" data-subcategory="Printers">Printers</a>
-  <a href="#" id="card701" class="subcategory-link" data-subcategory="Scanners">Scanners</a>
-  <a href="#" id="card801" class="subcategory-link" data-subcategory="Webcams">Webcams</a>
-  <a href="#" id="card901" class="subcategory-link" data-subcategory="Speakers">Speakers</a>
-  <a href="#" id="card1001" class="subcategory-link" data-subcategory="Headphones">Headphones</a>
-  <a href="#" id="card1101" class="subcategory-link" data-subcategory="Microphones">Microphones</a>
-  <a href="#" id="card1201" class="subcategory-link" data-subcategory="External Storage">External Storage</a>
-  <a href="#" id="card1301" class="subcategory-link" data-subcategory="Networking">Networking</a>
+  <div class="navbar10">
+    <a href="#" class="subcategory-link" data-subcategory="Plot">Plot</a>
+    <a href="#" class="subcategory-link" data-subcategory="Single Self">Single Self</a>
+    <a href="#" class="subcategory-link" data-subcategory="Double Self">Double Self</a>
+    <a href="#" class="subcategory-link" data-subcategory="Self-Contained">Self-Contained</a>
+    <a href="#" class="subcategory-link" data-subcategory="Bungalow">Bungalow</a>
+    <a href="#" class="subcategory-link" data-subcategory="Apartment">Apartment</a>
+    <a href="#" class="subcategory-link" data-subcategory="Condo">Condo</a>
+    <a href="#" class="subcategory-link" data-subcategory="Land">Land</a>
 </div>
-
 
 
 </div>
@@ -229,7 +220,8 @@
   
   
 
-<div id="latestComputers" class="category-products card-container"></div> <!-- Updated id to "latestFurniture" -->
+ 
+        <div id="latestHouse" class="category-products card-container"></div> <!-- Updated id to "latestFurniture" -->
 
   
         <div id="productList"></div>
@@ -295,8 +287,21 @@
 
   <script>
 
+document.getElementById('searchButton').addEventListener('click', async (event) => {
+  event.preventDefault();
+  const query = document.getElementById('searchInput').value.trim();
+  if (query) {
+    try {
+      const response = await fetch(`/search?category=house&query=${encodeURIComponent(query)}`);
+      if (!response.ok) throw new Error('Network response was not ok');
+      const products = await response.json();
+      displayLatestProducts('house', products);
+    } catch (error) {
+      console.error('Error fetching search results:', error);
+    }
+  }
+});
 
- 
 document.querySelectorAll('.subcategory-link').forEach(link => {
   link.addEventListener('click', async (event) => {
     event.preventDefault();
@@ -307,7 +312,7 @@ document.querySelectorAll('.subcategory-link').forEach(link => {
       if (!response.ok) throw new Error('Network response was not ok');
 
       const products = await response.json();
-      displayLatestProducts('computers', products); // Assuming 'Furniture' is the category
+      displayLatestProducts('House', products); // Assuming 'Furniture' is the category
     } catch (error) {
       console.error('Error fetching products:', error);
     }
