--- a/kuma/public/index.html
+++ b/kuma/public/index.html
@@ -25,7 +25,8 @@
 </head>
  
 <body>
-
+  <div id="welcomeMessage"></div>
+ 
   <header id="combined-header">
     <!-- Logo and Site Title Section -->
     <div id="logo-section" class="left-section">
@@ -99,15 +100,16 @@
   </div>
 <!-- Add a search input and category select element -->
 <div class="search-bar">
-  <input type="text" placeholder="Select category to search for..." id="searchInput" class="search-input">
-  <div class="select-wrapper">
-    <select id="categorySelect" class="nice-select">
+  <div class="search-input-wrapper">
+    <input type="text" placeholder="Select category to search for..." id="searchInput" class="search-input">
+    <div class="select-wrapper">
+      <select id="categorySelect" class="nice-select">
         <option value="phones">Phones</option>
         <option value="computers">Computers</option>
         <option value="house">House</option>
         <!-- Add other categories as needed -->
-    </select>
- 
+      </select>
+    </div>
   </div>
   <button type="submit" id="searchButton" class="search-button">Search</button>
 </div>
@@ -224,7 +226,7 @@
   <div class="modal-content">
     <span class="close">&times;</span>
     <h2>Login</h2>
-    <form id="uniqueLoginForm" action="/auth/login" method="POST">
+    <form id="loginForm">
       <input type="text" name="identifier" placeholder="Username or Email" required>
       <input type="password" name="password" placeholder="Password" required>
       <button type="submit">Login</button>
@@ -1293,18 +1295,7 @@ document.getElementById('searchButton').addEventListener('click', async () => {
 });
 
 
-
-
-
-
-
-
-
-
-
-
  
-
   </script>
   
 </body>
